--- a/demo.css
+++ b/demo.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 /* Demo Page Specific Styles */
 #main-content {
     width: 90%;
