--- a/testimonials.css
+++ b/testimonials.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 /* Testimonials Page Specific Styles */
 #main-content {
     width: 90%;
