--- a/topics.css
+++ b/topics.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 /* Topics Page Styles */
 #main-content {
     width: 90%;
